# alzheimer-peptide-design

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.cursor/rules/: project-core.mdc  protein-design-constraints.mdc  python-standards.mdc  tfg-workspace.mdc
.github/workflows/: ci.yml
docs/: AGENT_CONTEXT.md  BBB_CLASSIFIER.md  BOLTZ_FOLDING.md  DATASET_CLEANING.md  DATASET_PIPELINE.md  DATA_AUGMENTATION.md  EXPERIMENTAL_VALIDATION.tex  README.md  RL_MD_STRATEGY.md  STRUCTURAL_BBB_GUIDANCE.md  STRUCTURAL_CLASSIFIER.md  THEORETICAL_FRAMEWORK.md  VAST_TRAINING.md  architecture.md  reproducibility.md
docs/architecture/: agent-context.md  overview.md  reproducibility.md  theoretical-framework.md
docs/data/: bbb-dataset-pipeline.md  boltz-folding.md  data-augmentation.md  dataset-cleaning.md  dataset-pipeline.md
docs/design/: rl-md-strategy.md
docs/infrastructure/: vast-training.md
docs/models/: bbb-classifier.md  guidance-diffusion-bbb-geo.md  post-filtering-five-gates.md  resultados-filtrado-gsk3b-guided.md  structural-bbb-guidance.md  structural-classifier.md
docs/papers/: 12999_Scaling_Atomistic_Protei.md  2025.11.20.689494v1.full_BoltzGen.md  2026.04.09.717597v1.full (2).md  GSK3b_SOTA_Summary.md  s12987-024-00545-5 (2).md
docs/references/papers/: bbb-transport-meta-analysis-2024.md  boltzgen-preprint-2025.md  gsk3b-sota-summary.md  proteina-complexa-iclr-2026.md  termini-peptide-design-2026.md
docs/writing/: paper-writing-guide.md
infra/: _common.sh
infra/vast/: README.md  _common.sh
infra/vast/bbb_models/: run_cv.sh  run_train.sh  setup_instance.sh  sync_artifacts.sh  train_single.sh  upload_workspace.sh
infra/vast/boltzgen_design/: _campaign.sh  launch.sh  run_campaign.sh  run_guided_campaign.sh  setup_guided_env.sh  sync_results.sh
