[project]
name = "alzheimer-peptide-design"
version = "0.1.0"
description = "In silico design of BBB-compatible GSK3beta peptide modulators for Alzheimer's disease"
requires-python = ">=3.11,<3.13"
dependencies = [
  "bbb-models",
  "tfg-bbb-dataset",
  "boltzgen-design",
  "boltzgen",
]

[tool.uv.workspace]
members = [
  "packages/dataset",
  "packages/bbb_models",
  "packages/boltzgen_design",
  "packages/boltzgen",
]

[tool.uv.sources]
bbb-models = { workspace = true }
tfg-bbb-dataset = { workspace = true }
boltzgen-design = { workspace = true }
boltzgen = { workspace = true }

[dependency-groups]
dev = ["pytest>=8.2", "ruff>=0.4"]
notebook = ["jupyterlab>=4.0", "ipykernel>=6.29"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
